try fix cloudbuild.yaml for cloud run button

--- a/internal/serv/tmpl/cloudbuild.yaml
+++ b/internal/serv/tmpl/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
   # Build image with tag 'latest'
   - name: "gcr.io/cloud-builders/docker"
+    dir: "/"
     args:
       [
         "build",
